Добавлено обновление токенов на основе переданного refresh-токена.

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -7,5 +7,6 @@ database:
 
 auth:
   jwt_secret: super-secret-key
-  jwt_ttl_hours: 72
+  jwt_ttl_hours: 0
+  jwt_ttl_minutes: 1
   refresh_token_ttl_days: 7
